--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,12 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
-<%= @user.name %>, <%= @user.email %>
+<% provide(:title, @user.name) %>
+<% provide(:title, @user.name) %>
+<div class="row">
+  <aside class="span4">
+    <section>
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+    </section>
+  </aside>
+</div>
